src/test/ui/type-alias-impl-trait/generic_duplicate_param_use8.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/generic_duplicate_param_use8.rs:14:1
   |
LL | fn three<T: Debug, U: Debug>(_: T, u: U) -> Two<T, U> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `(T, u32)`, got `(U, u32)`
   |
note: previous use here
  --> $DIR/generic_duplicate_param_use8.rs:10:1
   |
LL | fn two<T: Debug, U: Debug>(t: T, _: U) -> Two<T, U> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: `T` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use8.rs:7:18
   |
LL | type Two<T, U> = impl Debug;
   |                  ^^^^^^^^^^ `T` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = note: required because of the requirements on the impl of `Debug` for `(T, u32)`
help: consider restricting type parameter `T`
   |
LL | type Two<T: Debug, U> = impl Debug;
   |           ^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
